# TextureDecoder

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
converter/src/: main.cpp
test_data/: bc4u.dds  bc6h_sf.hdr  chicken_df.pvr  etc1.pvr  mode-rg.dds  source.hdr  test_a8.vtf  test_abgr8888.vtf  test_argb8888.vtf  test_bgr565.vtf  test_bgr888.vtf  test_bgra4444.vtf  test_bgra5551.vtf  test_bgra8888.vtf  test_bgrx5551.vtf  test_bgrx8888.vtf  test_dxt1.vtf  test_dxt1_onebitalpha.vtf  test_dxt3.vtf  test_dxt5.vtf  test_i8.vtf  test_ia88.vtf  test_rgb565.vtf  test_rgb888.vtf  test_rgba8888.vtf  test_uv88.vtf  test_uvlx8888.vtf  test_uvwq8888.vtf
tester/src/: dds.cpp  main.cpp  pvr.cpp  shared.h  vtf.cpp
